# graph-coursework

./: .clang_complete  .hgignore  CMakeLists.txt  TODO.txt
doc/: presentation.tex  statement.tex  summary.bib  summary.tex  techtask.tex  РПЗ-курсовой проект.odt  ТЗ-курсовой проект.odt
res/: config.yml  scene.yml  templates.x
res/models/: cone.x  cube.x  models.yml  new_cone.x  scene.x  sphere.x  textured_cube.x
src/: CMakeLists.txt  application.cc  blendedlabelcontrol.cc  blendedlabelcontrol.h  cacheddrawer.cc  cacheddrawer.h  cachedlabelcontrol.cc  cachedlabelcontrol.h  cachedtextcontrol.cc  cachedtextcontrol.h  camera.cc  camera.h  camerasettings.cc  camerasettings.h  colorsettings.cc  colorsettings.h  colortransforms.h  colorxparse.cc  colorxparse.h  config.h  context.cc  context.h  contexttracer.cc  contexttracer.h  conveyorworker.cc  conveyorworker.h  courseeventhandler.cc  courseeventhandler.h  courseinterface.cc  courseinterface.h  coursescene.cc  coursescene.h  coursewindow.cc  coursewindow.h  coursework.cc  coursework.h  debug.cc  debug.h  drawingwindow.cc  drawingwindow.h  (+141 more)
src/common/: application.cc  application.h  debug.cc  debug.h  exception.cc  exception.h  filelogdestination.cc  filelogdestination.h  logging.cc  logging.h  math.cc  math.h  runtimearray.h  settings.cc  settings.h  singleton.h  stacktrace.cc  stacktrace.h
src/sdlobj/: color.cc  color.h  eventhandler.cc  eventhandler.h  font.cc  font.h  frametimer.cc  frametimer.h  rwops.cc  rwops.h  sdl.cc  sdl.h  sdlimage.cc  sdlimage.h  sdlttf.cc  sdlttf.h  surface.cc  surface.h  surfacepainter.cc  surfacepainter.h
src/xparse/: driver.cc  driver.h  guid.c  guid.cc  guid.h  lexer.h  lexer.ll  magic.cc  parser.yy  quoted.c  quoted.cc  quoted.h  xdata.cc  xdata.h  xfile.cc  xfile.h  xheader.cc  xheader.h  xnode.cc  xnode.h  xparse.l  xparse.y  xtemplate.cc  xtemplate.h
